TEST_PROGRAMS/VALID/07/func_decl_spec_acc.go
package main
func x() {}
func x(x int) int {}
func x(a, b_ int, z float64) bool {}
