TEST_PROGRAMS/INVALID/07/func_decl_spec_noacc.go
package main
func x(a, b int, z float64) (bool) {}
func x(prefix string, values ...int) {}
func x(a, b int, z float64, opt int) (success bool) {}
func x(int, int, float64) (float64, []int) {}
func x(n int) func(p T) {}
